Fix minor graphical bugs for non firefox browser

--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,21 @@
 @layer utilities {
     .inverted-corners {
         -webkit-mask-image:
-            radial-gradient(circle at top left, transparent 0, transparent  20px, black 21px),
-            radial-gradient(circle at top right, transparent 0, transparent  20px, black 21px),
-            radial-gradient(circle at bottom left, transparent 0, transparent  20px, black 21px),
-            radial-gradient(circle at bottom right, transparent 0, transparent  20px, black 21px);
+            radial-gradient(circle at top left, transparent 0, transparent  20px, black 20px),
+            radial-gradient(circle at top right, transparent 0, transparent  20px, black 20px),
+            radial-gradient(circle at bottom left, transparent 0, transparent  20px, black 20px),
+            radial-gradient(circle at bottom right, transparent 0, transparent  20px, black 20px);
         -webkit-mask-position: top left, top right, bottom left, bottom right;
         -webkit-mask-repeat: no-repeat;
-        -webkit-mask-size: 50% 50%;
+        -webkit-mask-size: 51% 51%;
         mask-image:
-            radial-gradient(circle at top left, transparent 0, transparent 20px, black 21px),
-            radial-gradient(circle at top right, transparent 0, transparent 20px, black 21px),
-            radial-gradient(circle at bottom left, transparent 0, transparent 20px, black 21px),
-            radial-gradient(circle at bottom right, transparent 0, transparent 20px, black 21px);
+            radial-gradient(circle at top left, transparent 0, transparent 20px, black 20px),
+            radial-gradient(circle at top right, transparent 0, transparent 20px, black 20px),
+            radial-gradient(circle at bottom left, transparent 0, transparent 20px, black 20px),
+            radial-gradient(circle at bottom right, transparent 0, transparent 20px, black 20px);
         mask-position: top left, top right, bottom left, bottom right;
         mask-repeat: no-repeat;
-        mask-size: 50% 50%;
+        mask-size: 51% 51%;
             }
 };
 
